--- a/WebContent/WEB-INF/resources/css/newfloor.css
+++ b/WebContent/WEB-INF/resources/css/newfloor.css
@@ -51,6 +51,9 @@ img#minimap{
 	
 div#img-wrapper {
 	position: absolute; 
+	width:80%;
+	height:100%;
+	overflow:auto;
 }	
 .cube-open {
 	display: table; 
@@ -88,6 +91,7 @@ div#img-wrapper {
 	width: 350px;
 	height: 220px; */
 	display:none;	
+	width:20%;
 }
 
 #accordion {
@@ -146,7 +150,7 @@ div#commands {
 	background-color:white;
 	font-size: 0.8em;
 	text-align: center;
-	width:500px;
+	/*width:500px;*/
 	padding:10px;
 	margin:10px;
 	border:1px solid grey;
