--- a/WebContent/WEB-INF/resources/css/registration.css
+++ b/WebContent/WEB-INF/resources/css/registration.css
@@ -28,7 +28,7 @@ body {
 .form-signin .form-control:focus {
     z-index: 2;
 }
-.form-signin input[type="text"] {
+/*.form-signin input[type="text"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
@@ -37,4 +37,4 @@ body {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-}
+}*/
