--- a/WebContent/WEB-INF/resources/css/registration.css
+++ b/WebContent/WEB-INF/resources/css/registration.css
@@ -38,3 +38,9 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }*/
+.form-signin .has-feedback .form-control {
+    padding-right: 30px;
+}
+.glyphicon {
+    padding-top:5px;
+}
