--- a/myreceipt-war/src/main/webapp/WEB-INF/resources/template/placeList.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/resources/template/placeList.html
@@ -34,7 +34,7 @@
     </form>
 </div>
 <div>
-    <h4>Found <span class="badge">{{places.results.length}}</span> places <span ng-show="coordinate">near my location <strong>({{coordinate}})</strong></span></h4>
+    <h4>Found <span class="badge">{{places.results.length}}</span> places <span ng-show="coordinate">near my location. <!--<strong>({{coordinate}})</strong>--></span></h4>
     <input type="search" class="form-control" placeholder="search by place name" ng-model="search">
     <br>
     <div class="list-group">
