--- a/myreceipt-war/src/main/webapp/WEB-INF/resources/template/receipt-items.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/resources/template/receipt-items.html
@@ -25,7 +25,7 @@
       <h3>Items</h3>
       <textarea id="scanned-items" ng-model="receipt.items" ng-show="receipt.items" style="width: 100%;">scanned data</textarea>
       <br/>
-      <button type="button" class="btn btn-default btn-sm" ng-click="saveItems()">save items</button>
+      <button id="save-item-btn" type="button" class="btn btn-default btn-sm" ng-click="saveItems()">save items</button>
     </div>
   </div>
 </div>
