--- a/myreceipt-war/src/main/webapp/WEB-INF/resources/css/registration.css
+++ b/myreceipt-war/src/main/webapp/WEB-INF/resources/css/registration.css
@@ -1,9 +1,23 @@
 body {
+    background: url('../images/pile_of_receipts.jpg') no-repeat fixed center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #eee;
 }
-
+.sign-in {
+    background-color: #f7f7f7;
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    width: 304px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+#form-msg {
+    padding-top: 10px;
+}
 .form-signin {
     max-width: 330px;
     padding: 15px;
