--- a/myreceipt-war/src/main/webapp/WEB-INF/resources/template/receipt-item.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/resources/template/receipt-item.html
@@ -1,7 +1,7 @@
 <!-- Show ReceiptDB -->
 <div id="receiptListId">
   <div class="page-header">
-    <h2 class="form-signin-heading">Receipt Item <a class="btn btn-default btn-sm pull-right" href="#/receipts">Back to List</a></h2>
+    <h2 class="form-signin-heading">Receipt Item</h2>
   </div>
   <div class="row">
     <div class="col-sm-6">
@@ -16,14 +16,22 @@
       <div ng-show="receipt.receiptPath != 'Not found'">
         <h3>Scan for item</h3>
         <button type="button" class="btn btn-default btn-sm edit" aria-label="Edit" ng-click="editReceipt(receipt.receiptId, $event, false)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Basic</button>
-        <button type="button" class="btn btn-default btn-sm edit" aria-label="Edit Premium" ng-click="editReceipt(receipt.receiptId, $event, true)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> premium</button>
+        <button id="scan-premium" type="button" class="btn btn-default btn-sm edit" aria-label="Edit Premium" ng-click="editReceipt(receipt.receiptId, $event, true)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> premium</button>
       </div>
       <h3>Total</h3>
       <p>{{receipt.receiptTotal | currency}}</p>
+      <h3>Preview</h3>
+      <a class="thumbnail" href="resources/uploaded/preview_{{receipt.receiptId}}.jpeg">
+        <img ng-src="resources/uploaded/preview_{{receipt.receiptId}}.jpeg"/>
+      </a>
     </div>
     <div class="col-sm-6">
-      <h3>Items</h3>
-      <textarea id="scanned-items" ng-model="receipt.items" ng-show="receipt.items" style="width: 100%;">scanned data</textarea>
+      <h3>Items Text</h3>
+      <textarea id="scanned-items" ng-model="receipt.items" ng-show="receipt.items" style="width: 100%;" ng-change="updateItemList()">scanned data</textarea>
+      <h3>Items List</h3>
+      <div class="list-group">
+        <div class="list-group-item" ng-repeat="item in itemList track by $index"><p>{{item}} <span class="pull-right">{{matchDollarSign(item) | currency}}</span></p></div>
+      </div>
       <br/>
       <button id="save-item-btn" type="button" class="btn btn-default btn-sm" ng-click="saveItems()">save items</button>
     </div>
